--- a/_posts/2022-11-26-test.md
+++ b/_posts/2022-11-26-test.md
@@ -1,8 +1,54 @@
-Test post
-=========
+整体 りせっと
+=============
 
  
 
-### Some text here.
+住所
+----
+
+〒234-0054 神奈川県横浜市港南区港南台４丁目１５−１２
+
+ 
+
+TEL
+---
+
+### 09093996719
+
+ 
+
+営業時間
+--------
+
+10:00-17:00
+
+定休日
+------
+
+月曜日
+
+ 
+
+プラン (税込)
+-------------
+
+30分 3000円
+
+60分 5000円
+
+90分 8000円
+
+ 
+
+ひとこと
+========
+
+### 一度、当店の技術を体験して下さい!!
+
+ 
+
+ 
+
+ 
 
  
